Fixed Actor bio field cut off due to missing general .editor class. (#205)
* Fixed Actor bio field cut off due to missing general .editor class.
* Automatic build of bundle

--- a/src/css/bundle.scss
+++ b/src/css/bundle.scss
@@ -231,6 +231,10 @@ select.display {
     .roll {
         @include rollable;
     }
+    .editor {
+        height: 95%;
+        width: 100%;
+    }
     .editor .tox-edit-area {
         background: $mce-background;
     }
